--- a/myFamily.html
+++ b/myFamily.html
@@ -3,7 +3,11 @@
 <head> </head>
 <body>
 <p> In my family there is my mom and dad and my brother who is 20. He studies at Rutgers New Brunswick. Also he's doing computer science. My mom and dad own there own business. I had 2 fishes but they killed themselves. </p>
-
+<a href = "index.html"> home </a>
+<a href = "hobbies.html"> hobbies </a>
+<a href = "list.html"> list </a>
+<a href = "school.txt"> school </a> 
+<a href = "myFamily.html"> family </a>
 
 <img src= "school.jpg" />
 <img src= "fish.jpg" />
