--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p> "Hellow! </p> <!-- this tag stands for a paragraph-->
 <p>This is our first page.
 </p>
-<p> I learned what a website was tofay and the different things it contained ad we looked deeper into a website such as pictures and text. I also learned how tro make a website and put paragraphs in a website. 
+<p> I learned what a website was tofay and the different things it contained ad we looked deeper into a website such as pictures and text. I also learned how tro make a website and put paragraphs in a website. </p>
 <p> The purpose of havinf varying sizes for headings is showing importance in a webpage. The larger ones are usally more important.</p>
 <ul>
 <1i>freshmen</1i>
