--- a/hobbies.html
+++ b/hobbies.html
@@ -14,7 +14,11 @@
 </p>
 
 
-
+<a href = "index.html"> home </a>
+<a href = "hobbies.html"> hobbies </a>
+<a href = "list.html"> list </a>
+<a href = "school.txt"> school </a> 
+<a href = "myFamily.html"> family </a>
 
 
 </body>
