--- a/school.html
+++ b/school.html
@@ -9,5 +9,10 @@
 <p>
 I did track in the 10th grade. It was really fun because i was with my friends and i am the fastest ones there. I am naturally good at track. I did the winter and spring. The only thing i didn't like where the uniforms. They were really tight but they were supper light. 
 </p>
+  <a href = "index.html"> home </a>
+<a href = "hobbies.html"> hobbies </a>
+<a href = "list.html"> list </a>
+<a href = "school.txt"> school </a> 
+<a href = "myFamily.html"> family </a>
 </body>
 </html>
