--- a/list.html
+++ b/list.html
@@ -11,7 +11,11 @@
 <h5> Courses </h5>
 <li> k </li>
 
-
+<a href = "index.html"> home </a>
+<a href = "hobbies.html"> hobbies </a>
+<a href = "list.html"> list </a>
+<a href = "school.txt"> school </a> 
+<a href = "myFamily.html"> family </a>
 </body>
 </html>
 
