--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 <a href = "hobbies.html"> hobbies </a>
 <a href = "list.html"> list </a>
 <a href = "school.txt"> school </a> 
-
+<a href = "myFamily.html"> family </a>
 </body>
 </html>
