--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-<head>background-color: lightblue </head>
+<head> </head>
 <!--this is how i write a comment in HTML bruh> <-->
-<body> <!-- this tag contains all the visable content of the webpage> <-->
+<body>{ <!-- this tag contains all the visable content of the webpage> <-->
 <!--headings:6 different sizes,h1 through h6-->
 <h1> this is a heading</h1>
 <h2> this is a heading</h2>
@@ -10,7 +10,8 @@
 <h4> this is a heading</h4>
 <h5> this is a heading</h5>
 <h6> this is a heading</h6>
-
+  background-color: lightblue;
+  }
 <p> "Hellow! </p> <!-- this tag stands for a paragraph-->
 <p>This is our first page.
 </p>
