--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-<head> </head>
+<head><link rel="stylesheet" type="text/css" href="mystyle.css">
+            </head>
 <!--this is how i write a comment in HTML bruh> <-->
 <body> <!-- this tag contains all the visable content of the webpage> <-->
 <!--headings:6 different sizes,h1 through h6-->
@@ -10,9 +11,7 @@
 <h4> this is a heading</h4>
 <h5> this is a heading</h5>
 <h6> this is a heading</h6>
-  body{ 
-  background-color: lightblue;
- }
+ 
 <p> "Hellow! </p> <!-- this tag stands for a paragraph-->
 <p>This is our first page.
 </p>
